--- a/src/pages/Checkbox.css
+++ b/src/pages/Checkbox.css
@@ -21,12 +21,12 @@ li {
   display: flex;
 }
 
-input[type="checkbox"][id^="cb{imgId}"] {
+input[type="checkbox"][id^="{item.id}"] {
   display: none;
 }
 
 label {
-  border: 1px solid #fff;
+  border: 1px solid transparent;
   padding: 10px;
   display: block;
   position: relative;
